# SpatialPPIv2

./: README.md  bayes.py  dataset_generator.py  inference.py  inference_AF_complex.py  main.py  pyproject.toml
config/: default.yaml
demo/: D3INY1.fasta  P62593.fasta  SpatialPPIv2_Colab_Example.ipynb  example_visualize.ipynb
env/: Apptainer  Dockerfile
scripts/: calculate_embedding.py  dataset_generator.py  exclude.txt
utils/: ctrl.py  dataset.py  model.py  residues.py  tool.py  visualize.py
